StubRoutines::vectorizedMismatch is missing for C1 compiler after JDK-8264321

XMLWordPrintable

    • x86
    • generic

      Reproduce: build minimal on x86

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x0000000000000000, pid=77522, tid=77529
      #
      # JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jvm.panama)
      # Java VM: OpenJDK 64-Bit Minimal VM (fastdebug 17-internal+0-adhoc.jvm.panama, mixed mode, emulated-client, compressed oops, compressed class ptrs, serial gc, linux-amd64)
      # Problematic frame:
      #

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: