8264427: StubRoutines::vectorizedMismatch is missing for C1 compiler after JDK-8264321